--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <h1>Elaine's Portfolio</h1>
     <img src="elaine-bio-pic.jpg " />
-    <p>I added a small update from the desktop file and updated via GitHub Desktop</p>
+    <p>update: I added this paragraph from the desktop file and updated via GitHub Desktop</p>
 </html>
