explored new way to push changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <h1>Elaine's Portfolio</h1>
     <img src="elaine-bio-pic.jpg " />
-    <p>update: I added this paragraph from the desktop file and updated via GitHub Desktop</p>
+    <p>Pushed this message via GitHub Desktop</p>
+    <p>Pushed this message via Visual Studio Code</p>
 </html>
