Changes pushed via terminal

--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
     <img src="elaine-bio-pic.jpg " />
     <p>Pushed this message via GitHub Desktop</p>
     <p>Pushed this message via Visual Studio Code</p>
+    <p>Pushed this message via Terminal</p>
 </html>
