--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-<html>
-    <h1>Elaine's Portfolio</h1>
-    <img src="elaine-bio-pic.jpg " />
-    <p>Pushed this message via GitHub Desktop</p>
-    <p>Pushed this message via Visual Studio Code</p>
-    <p>Pushed this message via Terminal</p>
+<!DOCTYPE html>
+<html lang="eng">
+    <head>
+        <meta charset="UTF-8">
+        <title>Elaine's Portfolio</title>
+    </head>
+    <body>
+        <H1>
+        Elaine is an experienced product designer, a problem solver with a strong passion for simplifying complexity.</H1>
+An empathetic, active listener, strategic thinker, and collaborative team player.
+I’ve worked at: Fabrica Collective, Google, McCann , Adobe, Sapient, R/GA, and a startup called Pundit Club.
+        
+
+    </body>
 </html>
