font size change

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Elaine's Portfolio</title>
 
         <!--====== Stylesheet ======-->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
 
         <!--====== Slick CSS ======-->
     <link rel="stylesheet" href="css/animate.css">
