--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     </head>
     <body>
-
-     <div id="includedContent"></div>
+        <div id="nav-placeholder"></div>
+     
         <H1>
             Hello.<br>
             I'm Elaine Keller.
@@ -25,9 +25,7 @@
 <p>Currently, I am working towards completing the MERN Full Stack program with MITxPRO.</p>
 <p>I've worked at: Fabrica Collective, Google, McCann , Adobe, Sapient, R/GA, and a startup called Dealerware.</p>
 <!--Navigation bar-->
-<div id="nav-placeholder">
 
-</div>
 
 <script src="//code.jquery.com/jquery.min.js"></script>
 <script>
