--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Elaine's Portfolio</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!--====== Stylesheet ======-->
         <link rel="stylesheet" href="css/style.css">
 
         <!--====== Slick CSS ======-->
-    <link rel="stylesheet" href="css/animate.css">
+         <link rel="stylesheet" href="css/animate.css">
 
-    <!--====== Bootstrap CSS ======-->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+        <!--====== Bootstrap CSS ======-->
+        <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <!--====== LineIcons CSS ======-->
-    <link rel="stylesheet" href="css/lineicons.css">
+        <!--====== LineIcons CSS ======-->
+        <link rel="stylesheet" href="css/lineicons.css">
+
+        <!--====== Default CSS ======-->
+        <link rel="stylesheet" href="css/default.css">
+
 
     </head>
     <body>
@@ -123,7 +129,7 @@
                     <div class="row align-items-center justify-content-center">
                         <div class="col-lg-6 col-md-9">
                             <div class="about_image mt-50 wow fadeInRightBig" data-wow-duration="1.3s" data-wow-delay="0.5s">
-                                <img src="images/about_hero.png" alt="Hero">
+                                <img src="images/elaine-bio-pic.jpg" alt="Hero">
                                 <div class="about_shape"></div>
                             </div> <!-- about image -->
                         </div>
@@ -131,21 +137,17 @@
                             <div class="about_content mt-45 wow fadeInLeftBig" data-wow-duration="1.3s" data-wow-delay="0.5s">
                                 <div class="section_title">
                                     <h5 class="sub_title">About</h5>
-                                    <h3 class="main_title">Why You Hire Me?</h3>
-                                    <ul class="line">
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                    </ul>
+                                    <h3 class="main_title">Skills and Motivations</h3>
+                                   
                                 </div> <!-- section title -->
-                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus.</p>
+                                <p>I am fueled by my passion for understanding people, behaviors, technology trends, and how communication continually changes throughout the years. Having a cross-cultural background makes this even more entertaining since I can apply my thinking to different people and countries. I am always learning and staying in tune with the latest trends and strategies through online courses and reading articles.</p>
 
                                 <div class="about_skills pt-15">
                                     <div class="skill_item mt-20">
                                         <div class="skill_header">
                                             <h6 class="skill_title">UI/UX Design</h6>
                                             <div class="skill_percentage">
-                                                <p><span class="counter">85</span>%</p>
+                                                <p><span class="counter">90</span>%</p>
                                             </div>
                                         </div>
                                         <div class="skill_bar">
