--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                                    
                                 </div> <!-- section title -->
                                 <p>I am fueled by my passion for understanding people, behaviors, technology trends, and how communication continually changes throughout the years. Having a cross-cultural background makes this even more entertaining since I can apply my thinking to different people and countries. I am always learning and staying in tune with the latest trends and strategies through online courses and reading articles.</p>
+                                <p><a href="https://www.linkedin.com/in/elaineck/"><i class="lni lni-linkedin"></i></a> &nbsp; <a href="https://github.com/elaine-keller"><i class="lni lni-github"></i></a></p>
 
                                 <div class="about_skills pt-15">
                                     <div class="skill_item mt-20">
@@ -264,10 +265,10 @@
                     <div class="footer_content text-center">
 
                         <ul class="footer_social">
-                            <li><a href="#"><i class="lni lni-facebook"></i></a></li>
-                            <li><a href="#"><i class="lni lni-twitter"></i></a></li>
-                            <li><a href="#"><i class="lni lni-instagram"></i></a></li>
-                            <li><a href="#"><i class="lni lni-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/elaineck/"><i class="lni lni-linkedin"></i></a></li>
+                            <li><a href="https://github.com/elaine-keller"><i class="lni lni-github"></i></a></li>
+                            <li><a href="https://www.instagram.com/elaineck/"><i class="lni lni-instagram"></i></a></li>
+                            
                         </ul>
                         <span class="email">elaineck@mac.com</span>
                         <ul class="footer_menu">
