--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="single_portfolio mt-30 wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.2s">
                                 <div class="portfolio_icon">
-                                    <i class="lni lni-vector"></i>
+                                    <i class="lni lni-eye"></i>
                                 </div>
                                 <div class="portfolio_content">
                                     <h4 class="portfolio_title"><a href="https://elaine-keller.github.io/eyes/">Eyes Movement</a></h4>
@@ -228,7 +228,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="single_portfolio mt-30 wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.5s">
                                 <div class="portfolio_icon">
-                                    <i class="lni lni-layout"></i>
+                                    <i class="lni lni-grid-alt"></i>
                                 </div>
                                 <div class="portfolio_content">
                                     <h4 class="portfolio_title"><a href="https://elaine-keller.github.io/pacman-random/">Pac Man</a></h4>
