--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
                                         <div class="skill_header">
                                             <h6 class="skill_title">UI/UX Design</h6>
                                             <div class="skill_percentage">
-                                                <p><span class="counter">90</span>%</p>
+                                                <p><span class="counter">95</span>%</p>
                                             </div>
                                         </div>
                                         <div class="skill_bar">
                                             <div class="bar_inner">
-                                                <div class="bar progress_line" data-width="85"></div>
+                                                <div class="bar progress_line" data-width="95"></div>
                                             </div>
                                         </div>
                                     </div> <!-- skill item -->
@@ -168,25 +168,25 @@
                                         <div class="skill_header">
                                             <h6 class="skill_title">HTML/CSS</h6>
                                             <div class="skill_percentage">
-                                                <p><span class="counter">50</span>%</p>
+                                                <p><span class="counter">40</span>%</p>
                                             </div>
                                         </div>
                                         <div class="skill_bar">
                                             <div class="bar_inner">
-                                                <div class="bar progress_line" data-width="90"></div>
+                                                <div class="bar progress_line" data-width="40"></div>
                                             </div>
                                         </div>
                                     </div> <!-- skill item -->
                                     <div class="skill_item mt-20">
                                         <div class="skill_header">
-                                            <h6 class="skill_title">Figma</h6>
+                                            <h6 class="skill_title">Javascript (starting)</h6>
                                             <div class="skill_percentage">
-                                                <p><span class="counter">65</span>%</p>
+                                                <p><span class="counter">20</span>%</p>
                                             </div>
                                         </div>
                                         <div class="skill_bar">
                                             <div class="bar_inner">
-                                                <div class="bar progress_line" data-width="65"></div>
+                                                <div class="bar progress_line" data-width="20"></div>
                                             </div>
                                         </div>
                                     </div> <!-- skill item -->
@@ -220,7 +220,7 @@
                                 <div class="portfolio_content">
                                     <h4 class="portfolio_title"><a href="https://elaine-keller.github.io/eyes/">Eyes Movement</a></h4>
                                     <p>The following exercise has two eyes following the mouse movements as a practice sample of Javascript functions and CSS.</p>
-                                    <p> <a href="https://elaine-keller.github.io/eyes/" target="_blank">View Project</a>  |  <a href="https://github.com/elaine-keller/eyes" target="_blank">Github Repository</a></p>
+                                    <p class="portfolio_link"> <a href="https://elaine-keller.github.io/eyes/" target="_blank">View Project</a>  |  <a href="https://github.com/elaine-keller/eyes" target="_blank">Github Repository</a></p>
                                    
                                 </div>
                             </div> <!-- single portfolio -->
